--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -15,44 +15,44 @@ services:
     kayue_wordpress:
         class: Kayue\WordpressBundle\Wordpress\ManagerRegistry
         arguments:
-            - @kayue_wordpress.dbal.connection
-            - @doctrine.orm.entity_manager
-            - @event_dispatcher
-            - %kernel.root_dir%
-            - %kernel.environment%
+            - '@kayue_wordpress.dbal.connection'
+            - '@doctrine.orm.entity_manager'
+            - '@event_dispatcher'
+            - '%kernel.root_dir%'
+            - '%kernel.environment%'
 
     kayue_wordpress.helper.attachment:
         class: Kayue\WordpressBundle\Wordpress\Helper\AttachmentHelper
         arguments:
-            - @kayue_wordpress
+            - '@kayue_wordpress'
 
     kayue_wordpress.manager.configuration:
         class: %kayue_wordpress.manager.configuration.class%
         arguments:
-            - %kayue_wordpress.site_url%
-            - %kayue_wordpress.cookie_path%
-            - %kayue_wordpress.cookie_domain%
-            - %kayue_wordpress.logged_in_key%
-            - %kayue_wordpress.logged_in_salt%
+            - '%kayue_wordpress.site_url%'
+            - '%kayue_wordpress.cookie_path%'
+            - '%kayue_wordpress.cookie_domain%'
+            - '%kayue_wordpress.logged_in_key%'
+            - '%kayue_wordpress.logged_in_salt%'
 
     kayue_wordpress.manager.authentication_cookie:
-        class: %kayue_wordpress.manager.authentication_cookie.class%
+        class: '%kayue_wordpress.manager.authentication_cookie.class%'
         arguments:
-            - @kayue_wordpress.manager.configuration
+            - '@kayue_wordpress.manager.configuration'
 
     kayue_wordpress.security.authentication.provider:
-        class: %kayue_wordpress.security.authentication.provider.class%
+        class: '%kayue_wordpress.security.authentication.provider.class%'
         public: false
 
     kayue_wordpress.security.authentication.listener:
-        class: %kayue_wordpress.security.authentication.listener.class%
+        class: '%kayue_wordpress.security.authentication.listener.class%'
         arguments:
-            - @security.context
-            - @kayue_wordpress.security.cookie.service
-            - @kayue_wordpress.manager.authentication_cookie
-            - @security.authentication.manager
-            - @logger
-            - @event_dispatcher
+            - '@security.authorization_checker'
+            - '@kayue_wordpress.security.cookie.service'
+            - '@kayue_wordpress.manager.authentication_cookie'
+            - '@security.authentication.manager'
+            - '@logger'
+            - '@event_dispatcher'
         tags:
             - {name: monolog.logger, channel: security}
 
@@ -60,24 +60,24 @@ services:
         class: %kayue_wordpress.security.logout.handler.cookie_clearing.class%
         parent: security.logout.handler.cookie_clearing
         arguments:
-            - @kayue_wordpress.manager.authentication_cookie
+            - '@kayue_wordpress.manager.authentication_cookie'
 
     kayue_wordpress.security.cookie.service:
-        class: %kayue_wordpress.security.cookie.service.class%
+        class: '%kayue_wordpress.security.cookie.service.class%'
 
     kayue_wordpress.security.encoder.phpass:
-        class: %kayue_wordpress.security.encoder.phpass.class%
+        class: '%kayue_wordpress.security.encoder.phpass.class%'
 
     kayue_wordpress.security.user_provider:
         class: Kayue\WordpressBundle\Security\User\WordpressUserProvider
         arguments:
-            - @kayue_wordpress
+            - '@kayue_wordpress'
 
     kayue_wordpress.twig.wordpress:
         class: Kayue\WordpressBundle\Twig\Extension\WordpressExtension
         arguments:
-            - @kayue_wordpress
-            - @kayue_wordpress.shortcode_chain
-            - @kayue_wordpress.helper.attachment
+            - '@kayue_wordpress'
+            - '@kayue_wordpress.shortcode_chain'
+            - '@kayue_wordpress.helper.attachment'
         tags:
             - { name: twig.extension }
